edit h1 tag to header tag

--- a/index_1.html
+++ b/index_1.html
@@ -7,7 +7,7 @@
     <title>Assignment No.1</title>
 </head>
 <body>
-    <h1>Bibliography</h1>
+    <header>Bibliography</header>
     <p>It all began, when I was born... 8 out of the 10 cats meiw'd simultenously...</p>
 </body>
 </html>
